fix for gif on mobile

--- a/style.css
+++ b/style.css
@@ -194,9 +194,9 @@ span{
         padding-bottom: 10px;
       }
       .gif-demo {
-        width: 95%;
-        margin-top: 31.8%;
-        margin-left: 3%;
+        width: 93.8%;
+        margin-top: 31.2%;
+        margin-left: 4%;
       }
       .mobile-image {
         display: block;
